force-app/main/default/objects/Order_Update__e/Order_Update__e.object-meta.xml
<CustomObject>
    <label>Order Update</label>
    <pluralLabel>Order Updates</pluralLabel>
</CustomObject>