force-app/main/default/objects/Order_Update__e/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order #</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>