force-app/main/default/objects/Order_Update__e/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>